# plexio

./: .drone.yml  .gitignore  .woodpecker.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  fly.toml  index.yaml  local.Dockerfile  nginx-local.conf  pyproject.toml  unit-nginx-config.json
.github/workflows/: build.yml  chart-release.yaml
backend/: dependencies.py  main.py  settings.py
backend/models/: __init__.py  addon.py  plex.py  stremio.py  utils.py
backend/routers/: addon.py  auth.py  configuration.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  be-deployment.yaml  be-service.yaml  fe-deployment.yaml  fe-service.yaml  ingress.yaml  pvc.yaml 
charts/plexio/: Chart.yaml  values.yaml
charts/plexio/templates/: frontend.yaml  plex-matcher.yaml  server.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend-vite/: .eslintrc.cjs  index.html  local.Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-vite/src/: App.tsx  index.css  main.tsx
frontend-vite/src/components/: configurationForm.tsx  faq.tsx  loading.tsx  login.tsx  themeToggle.tsx
frontend-vite/src/hooks/: useClientIdentifier.tsx  usePMSSections.tsx  usePlexServers.tsx  usePlexToken.tsx  usePlexUser.tsx
frontend-vite/src/pages/: AuthRedirectPage.tsx  ProtectedFormPage.tsx
frontend-vite/src/services/: BackendService.tsx  PMSService.tsx  PlexService.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js  main.tsx
frontend/src/components/: faq.tsx  header.tsx  icons.tsx  loading.tsx  protectedForm.tsx  themeProvider.tsx  themeToggle.tsx
frontend/src/hooks/: useClientIdentifier.tsx  usePMSSections.tsx  usePlexToken.tsx  usePlexUser.tsx  useToast.ts
frontend/src/pages/: AuthRedirectPage.tsx  ProtectedFormPage.tsx
plexio/: __init__.py  cache.py  dependencies.py  main.py  settings.py
plexio/models/: __init__.py  addon.py  plex.py  stremio.py  utils.py
plexio/plex/: media_server_api.py  plextv_api.py  utils.py
plexio/routers/: addon.py  auth.py  configuration.py
webapp/: local.Dockerfile
webapp/src/: constants.js  index.js
(+27 files in other folders)
