[project]
name = "plexio"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "fastapi==0.104.1",
    "pydantic-settings==2.0.1",
    "yarl==1.9.4",
    "uvicorn==0.24.0",
    "aiohttp==3.9.1",
    "redis==5.0.1",
    "sentry-sdk[fastapi]==1.38.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.0"
]

[tool.hatch.version]
path = "plexio/__init__.py"

[tool.setuptools]
packages = ["plexio"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
quote-style="single"
